referenced projects codingame.common and codingame.common.test

--- a/codingame.heat.detector/codingame.heat.detector.test/codingame.heat.detector.test.csproj
+++ b/codingame.heat.detector/codingame.heat.detector.test/codingame.heat.detector.test.csproj
@@ -61,6 +61,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\codingame-common\codingame.common\codingame.common.test\codingame.common.test.csproj">
+      <Project>{939d99ad-6d21-48af-a150-3ddd1d7ee9fd}</Project>
+      <Name>codingame.common.test</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\codingame-common\codingame.common\codingame.common\codingame.common.csproj">
+      <Project>{22152da3-c08d-40aa-b086-8c48c45bd08c}</Project>
+      <Name>codingame.common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\codingame.heat.detector\codingame.heat.detector.csproj">
       <Project>{401c2dad-cfe4-4712-a50c-c8947d710d4b}</Project>
       <Name>codingame.heat.detector</Name>
