added and used reference to codingame.common.build.submit.file

--- a/codingame.heat.detector/codingame.heat.detector.build/codingame.heat.detector.build.csproj
+++ b/codingame.heat.detector/codingame.heat.detector.build/codingame.heat.detector.build.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <Content Include="codingame.heat.detector.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\codingame-common\codingame.common\codingame.common.build.submit.file\codingame.common.build.submit.file.csproj">
+      <Project>{d461583d-276a-4452-917c-6a7edebe3cdf}</Project>
+      <Name>codingame.common.build.submit.file</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
