used NoMoreLinesToReadException instead of ArgumentException

--- a/codingame.heat.detector/codingame.heat.detector/codingame.heat.detector.csproj
+++ b/codingame.heat.detector/codingame.heat.detector/codingame.heat.detector.csproj
@@ -48,6 +48,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Window.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\codingame-common\codingame.common\codingame.common\codingame.common.csproj">
+      <Project>{22152da3-c08d-40aa-b086-8c48c45bd08c}</Project>
+      <Name>codingame.common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
