--- a/codingame.heat.detector/codingame.heat.detector/codingame.heat.detector.csproj
+++ b/codingame.heat.detector/codingame.heat.detector/codingame.heat.detector.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Building.cs" />
+    <Compile Include="CompositeDirection.cs" />
     <Compile Include="Direction.cs" />
+    <Compile Include="MovementVector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Window.cs" />
