--- a/codingame.heat.detector/codingame.heat.detector.test/codingame.heat.detector.test.csproj
+++ b/codingame.heat.detector/codingame.heat.detector.test/codingame.heat.detector.test.csproj
@@ -52,13 +52,16 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="BuildingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CompositeDirectionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\codingame-common\codingame.common\codingame.common\codingame.common.csproj">
