--- a/codingame.heat.detector/codingame.heat.detector.test/codingame.heat.detector.test.csproj
+++ b/codingame.heat.detector/codingame.heat.detector.test/codingame.heat.detector.test.csproj
@@ -62,6 +62,7 @@
     <Compile Include="BuildingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CompositeDirectionTest.cs" />
+    <Compile Include="NextJumpCalculatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\codingame-common\codingame.common\codingame.common\codingame.common.csproj">
